# smik-jar-tool

./: Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.github/workflows/: rust.yaml
smik-jar-lib/: Cargo.toml
smik-jar-lib/src/: by_path.rs  copy_partial.rs  entries_mut.rs  error.rs  jar_file.rs  lib.rs  read_version.rs  update_jar.rs  write_version.rs  zip_file_path.rs
smik-jar-tool/: Cargo.toml
smik-jar-tool/src/: main.rs
