[package]
name = "smik-jar-lib"
description = "A library for managing versions of smik JAR files."
authors = ["Richard Neumann <neumann@paulmann.de>"]
license = "MIT"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
java-properties = "2.0"
log = "0.4"
zip = { version = "4.3", default-features = false, features = ["deflate"] }

[lints]
workspace = true
