[package]
name = "smik-jar-tool"
description = "A command-line tool for managing versions of smik JAR files."
authors = ["Richard Neumann <neumann@paulmann.de>"]
license = "MIT"
version = "0.1.3"
edition = "2024"
publish = false

[lints]
workspace = true

[dependencies]
clap = { version = "4.5", features = ["derive"] }
smik-jar-lib = { path = "../smik-jar-lib" }
log = "0.4"
env_logger = "0.11"